--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -9,7 +9,7 @@ body {
 }
 
 a {
-    color: #FF6F61;
+    color: #1ABB9C;
 }
 
 a:hover,
@@ -44,7 +44,7 @@ h2 {
 .back-to-top {
     position: fixed;
     display: none;
-    background: #FF6F61;
+    background: #1ABB9C;
     color: #ffffff;
     width: 40px;
     height: 40px;
@@ -80,7 +80,7 @@ h2 {
 .form-control:focus,
 .custom-select:focus {
     box-shadow: none;
-    border-color: #FF6F61;
+    border-color: #1ABB9C;
 }
 
 .custom-radio,
@@ -97,22 +97,22 @@ h2 {
 .custom-radio .custom-control-input:checked~.custom-control-label::before,
 .custom-checkbox .custom-control-input:checked~.custom-control-label::before {
     color: #ffffff;
-    background: #FF6F61;
-    border-color: #FF6F61;
+    background: #1ABB9C;
+    border-color: #1ABB9C;
     box-shadow: none;
 }
 
 .btn {
-    color: #FF6F61;
+    color: #1ABB9C;
     background: #ffffff;
-    border: 1px solid #FF6F61;
+    border: 1px solid #1ABB9C;
 }
 
 .btn:hover,
 .btn:active,
 .btn:focus {
     color: #ffffff;
-    background: #FF6F61;
+    background: #1ABB9C;
     box-shadow: none;
 }
 
@@ -160,7 +160,7 @@ h2 {
 .normal-slider .slick-prev:focus::before,
 .normal-slider .slick-next:hover::before,
 .normal-slider .slick-next:focus::before {
-    color: #FF6F61;
+    color: #1ABB9C;
 }
 
 .normal-slider .slick-prev::before,
@@ -189,7 +189,7 @@ h2 {
 }
 
 .normal-slider .slick-dots li.slick-active button:before {
-    color: #FF6F61;
+    color: #1ABB9C;
 }
 
 .slick-dotted.slick-slider {
@@ -203,7 +203,7 @@ h2 {
 .top-bar {
     padding: 3px 0;
     font-size: 14px;
-    color: #FF6F61;
+    color: #1ABB9C;
     background: #000000;
 }
 
@@ -254,7 +254,7 @@ h2 {
     margin-top: 0;
     border: 0;
     border-radius: 0;
-    background: #FF6F61;
+    background: #1ABB9C;
 }
 
 .nav .dropdown-menu a.active {
@@ -265,7 +265,7 @@ h2 {
 @media (min-width: 768px) {
     .nav,
     .nav .navbar {
-        background: #FF6F61 !important;
+        background: #1ABB9C !important;
     }
     
     .nav .navbar-brand {
@@ -331,7 +331,7 @@ h2 {
     height: 40px;
     padding: 0 15px;
     color: #666666;
-    border: 1px solid #FF6F61;
+    border: 1px solid #1ABB9C;
     border-radius: 4px;
 }
 
@@ -344,12 +344,12 @@ h2 {
     padding: 0 15px;
     border: none;
     background: none;
-    color: #FF6F61;
+    color: #1ABB9C;
     border-radius: 0 2px 2px 0;
 }
 
 .bottom-bar .search button:hover {
-    background: #FF6F61;
+    background: #1ABB9C;
     color: #ffffff;
 }
 
@@ -364,12 +364,12 @@ h2 {
 
 .bottom-bar .user .cart i,
 .bottom-bar .user .wishlist i {
-    color: #FF6F61;
+    color: #1ABB9C;
 }
 
 .bottom-bar .user .cart span,
 .bottom-bar .user .wishlist span {
-    color: #FF6F61;
+    color: #1ABB9C;
     font-size: 15px;
 }
 
@@ -438,12 +438,12 @@ h2 {
     color: #353535;
 }
 .header .navbar a:hover {
-    color: #FF6F61;
+    color: #1ABB9C;
 }
 
 
 .header .navbar i {
-    color: #FF6F61;
+    color: #1ABB9C;
     width: 20px;
     text-align: center;
     margin-right: 8px;
@@ -661,7 +661,7 @@ h2 {
 }
 
 .feature .feature-content i {
-    color: #FF6F61;
+    color: #1ABB9C;
     font-size: 60px;
     margin-bottom: 30px;
 }
@@ -691,7 +691,7 @@ h2 {
 }
 
 .product-item:hover .product-title {
-    background: #FF6F61;
+    background: #1ABB9C;
 }
 
 .product-item .product-title a,
@@ -708,7 +708,7 @@ h2 {
 
 .product-item .product-title .ratting i {
     font-size: 14px;
-    color: #FF6F61;
+    color: #1ABB9C;
 }
 
 .product-item .product-content .price span {
@@ -776,7 +776,7 @@ h2 {
     font-size: 16px;
     text-align: center;
     color: #ffffff;
-    background: #FF6F61;
+    background: #1ABB9C;
     border: 1px solid #ffffff;
     border-radius: 4px;
     transition: all .3s;
@@ -792,9 +792,9 @@ h2 {
 }
 
 .product-item .product-image .product-action a:hover {
-    color: #FF6F61;
+    color: #1ABB9C;
     background: #ffffff;
-    border: 1px solid #FF6F61;
+    border: 1px solid #1ABB9C;
 }
 
 .product-item .product-price {
@@ -804,7 +804,7 @@ h2 {
 }
 
 .product-item:hover .product-price {
-    background: #FF6F61;
+    background: #1ABB9C;
 }
 
 .product-item .product-price h3 {
@@ -821,12 +821,12 @@ h2 {
     float: right;
     border: none;
     color: #000000;
-    background: #FF6F61;
+    background: #1ABB9C;
 }
 
 .product-item:hover .product-price .btn,
 .product-item .product-price .btn:hover {
-    color: #FF6F61;
+    color: #1ABB9C;
     background: #ffffff;
 }
 
@@ -851,7 +851,7 @@ h2 {
 .product .section-header {
     margin-bottom: 30px;
     padding: 20px 30px 15px 30px;
-    color: #FF6F61;
+    color: #1ABB9C;
     background: #ffffff;
 }
 
@@ -862,9 +862,9 @@ h2 {
     height: 30px;
     z-index: 1;
     transition: .5s;
-    color: #FF6F61;
+    color: #1ABB9C;
     background: #ffffff;
-    border: 1px solid #FF6F61;
+    border: 1px solid #1ABB9C;
     border-radius: 4px;
 }
 
@@ -880,7 +880,7 @@ h2 {
 .product .slick-prev:focus,
 .product .slick-next:hover,
 .product .slick-next:focus {
-    background: #FF6F61;
+    background: #1ABB9C;
 }
 
 .product .slick-prev::before,
@@ -888,7 +888,7 @@ h2 {
     font-family: "Font Awesome 5 Free";
     font-size: 18px;
     font-weight: 900;
-    color: #FF6F61;
+    color: #1ABB9C;
 }
 
 .product .slick-prev::before {
@@ -939,7 +939,7 @@ h2 {
 }
 
 .product-view .product-search input:focus {
-    border-color: #FF6F61;
+    border-color: #1ABB9C;
 }
 
 .product-view .product-search button {
@@ -961,7 +961,7 @@ h2 {
 }
 
 .product-view .product-search button:hover {
-    background: #FF6F61;
+    background: #1ABB9C;
     color: #ffffff;
 }
 
@@ -988,8 +988,8 @@ h2 {
 
 .product-view .product-short .dropdown .dropdown-toggle:hover,
 .product-view .product-price-range .dropdown .dropdown-toggle:hover {
-    color: #FF6F61;
-    border-color: #FF6F61;
+    color: #1ABB9C;
+    border-color: #1ABB9C;
 }
 
 .product-view .product-short .dropdown .dropdown-toggle::after,
@@ -1020,7 +1020,7 @@ h2 {
 
 .product-view .pagination .page-item:hover .page-link,
 .product-view .pagination .page-item.active .page-link {
-    color: #FF6F61;
+    color: #1ABB9C;
     background: #000000;
 }
 
@@ -1056,11 +1056,11 @@ h2 {
 
 .product-detail .product-slider-single-nav {
     margin: 15px 30px 30px 30px;
-    border: 3px double #FF6F61;
+    border: 3px double #1ABB9C;
 }
 
 .product-detail .product-slider-single-nav .slider-nav-img {
-    border-right: 1px solid #FF6F61;
+    border-right: 1px solid #1ABB9C;
     overflow: hidden;
 }
 
@@ -1104,7 +1104,7 @@ h2 {
 }
 
 .product-detail .product-content .ratting i {
-    color: #FF6F61;
+    color: #1ABB9C;
     font-size: 16px;
 }
 
@@ -1128,7 +1128,7 @@ h2 {
 
 .product-detail .product-content .price p {
     display: inline-block;
-    color: #FF6F61;
+    color: #1ABB9C;
     font-size: 30px;
     font-weight: 700;
     margin: 0;
@@ -1152,7 +1152,7 @@ h2 {
     font-size: 16px;
     text-align: center;
     color: #ffffff;
-    background: #FF6F61;
+    background: #1ABB9C;
     border: none;
 }
 
@@ -1183,7 +1183,7 @@ h2 {
 }
 
 .product-detail .nav.nav-pills .nav-link {
-    color: #FF6F61;
+    color: #1ABB9C;
     background: #000000;
     border-radius: 0;
     transition: all .3s;
@@ -1192,7 +1192,7 @@ h2 {
 .product-detail .nav.nav-pills .nav-link:hover,
 .product-detail .nav.nav-pills .nav-link.active {
     color: #000000;
-    background: #FF6F61;
+    background: #1ABB9C;
 }
 
 .product-detail .tab-content {
@@ -1223,7 +1223,7 @@ h2 {
 }
 
 .product-detail .tab-content .reviewer {
-    color: #FF6F61;
+    color: #1ABB9C;
     font-size: 18px;
     font-weight: 600;
 }
@@ -1235,7 +1235,7 @@ h2 {
 }
 
 .product-detail .tab-content .ratting {
-    color: #FF6F61;
+    color: #1ABB9C;
     margin-bottom: 15px;
 }
 
@@ -1267,9 +1267,9 @@ h2 {
     display: inline-block;
     height: 35px;
     padding: 0 15px;
-    color: #FF6F61;
+    color: #1ABB9C;
     background: #ffffff;
-    border: 1px solid #FF6F61;
+    border: 1px solid #1ABB9C;
     border-radius: 4px;
     margin-bottom: 15px;
     transition: all .3s;
@@ -1277,7 +1277,7 @@ h2 {
 
 .product-detail .tab-content .form button:hover {
     color: #ffffff;
-    background: #FF6F61;
+    background: #1ABB9C;
 }
 
 
@@ -1327,11 +1327,11 @@ h2 {
 }
 
 .sidebar-widget.category .navbar a:hover {
-    color: #FF6F61;
+    color: #1ABB9C;
 }
 
 .sidebar-widget.category .navbar i {
-    color: #FF6F61;
+    color: #1ABB9C;
     width: 20px;
     text-align: center;
     margin-right: 8px;
@@ -1371,7 +1371,7 @@ h2 {
 }
 
 .sidebar-widget.brands ul li a:hover {
-    color: #FF6F61;
+    color: #1ABB9C;
 }
 
 .sidebar-widget.brands ul li a:hover::before {
@@ -1427,8 +1427,8 @@ h2 {
 
 .sidebar-widget.tag a:hover {
     color: #ffffff;
-    background: #FF6F61;
-    border-color: #FF6F61;
+    background: #1ABB9C;
+    border-color: #1ABB9C;
 }
 
 
@@ -1498,7 +1498,7 @@ h2 {
     font-size: 14px;
     text-align: center;
     color: #ffffff;
-    background: #FF6F61;
+    background: #1ABB9C;
     border: none;
     border-radius: 4px;
 }
@@ -1546,7 +1546,7 @@ h2 {
 }
 
 .cart-page .coupon input:focus {
-    border-color: #FF6F61;
+    border-color: #1ABB9C;
 }
 
 .cart-page .coupon button {
@@ -1555,15 +1555,15 @@ h2 {
     padding: 2px 0;
     font-size: 16px;
     text-align: center;
-    color: #FF6F61;
+    color: #1ABB9C;
     background: #ffffff;
-    border: 1px solid #FF6F61;
+    border: 1px solid #1ABB9C;
     border-radius: 4px;
 }
 
 .cart-page .coupon button:hover {
     color: #ffffff;
-    background: #FF6F61;
+    background: #1ABB9C;
 }
 
 .cart-page .cart-summary {
@@ -1601,26 +1601,26 @@ h2 {
     padding: 2px 10px;
     text-align: center;
     color: #ffffff;
-    background: #FF6F61;
+    background: #1ABB9C;
     border: none;
     border-radius: 4px;
 }
 
 .cart-page .cart-summary .cart-btn button:hover {
-    color: #FF6F61;
+    color: #1ABB9C;
     background: #000000;
 }
 
 .cart-page .cart-summary .cart-btn button:first-child {
     margin-right: 25px;
-    color: #FF6F61;
+    color: #1ABB9C;
     background: #ffffff;
-    border: 1px solid #FF6F61;
+    border: 1px solid #1ABB9C;
 }
 
 .cart-page .cart-summary .cart-btn button:first-child:hover {
     color: #ffffff;
-    background: #FF6F61;
+    background: #1ABB9C;
 }
 
 
@@ -1689,7 +1689,7 @@ h2 {
     font-size: 14px;
     text-align: center;
     color: #ffffff;
-    background: #FF6F61;
+    background: #1ABB9C;
     border: none;
     border-radius: 4px;
 }
@@ -1798,14 +1798,14 @@ h2 {
     font-size: 25px;
     text-align: center;
     color: #000000;
-    background: #FF6F61;
+    background: #1ABB9C;
     border: none;
     border-radius: 4px;
     transition: all .3s;
 }
 
 .checkout .checkout-payment .checkout-btn button:hover {
-    color: #FF6F61;
+    color: #1ABB9C;
     background: #000000;
 }
 
@@ -1834,7 +1834,7 @@ h2 {
 .my-account .nav.nav-pills .nav-link:hover,
 .my-account .nav.nav-pills .nav-link.active {
     color: #ffffff;
-    background: #FF6F61;
+    background: #1ABB9C;
 }
 
 .my-account .nav.nav-pills .nav-link i {
@@ -1872,7 +1872,7 @@ h2 {
 .call-to-action {
     position: relative;
     padding: 30px 0;
-    background: #FF6F61;
+    background: #1ABB9C;
 }
 
 .call-to-action .col-md-6:last-child {
@@ -1919,7 +1919,7 @@ h2 {
 .newsletter {
     position: relative;
     padding: 30px 0;
-    background: #FF6F61;
+    background: #1ABB9C;
 }
 
 .newsletter h1 {
@@ -1951,14 +1951,14 @@ h2 {
     right: 0;
     padding: 0 15px;
     border: none;
-    background: #FF6F61;
+    background: #1ABB9C;
     color: #ffffff;
     border: 1px solid #ffffff;
     border-radius: 0 4px 4px 0;
 }
 
 .newsletter .form button:hover {
-    color: #FF6F61;
+    color: #1ABB9C;
     background: #000000;
 }
 
@@ -2003,7 +2003,7 @@ h2 {
     z-index: 1;
     opacity: 0;
     transition: .5s;
-    background: #FF6F61;
+    background: #1ABB9C;
     border-radius: 4px;
 }
 
@@ -2036,7 +2036,7 @@ h2 {
 .brand .slick-prev:focus::before,
 .brand .slick-next:hover::before,
 .brand .slick-next:focus::before {
-    color: #FF6F61;
+    color: #1ABB9C;
 }
 
 .brand .slick-prev::before,
@@ -2113,7 +2113,7 @@ h2 {
 }
 
 .review .review-text .ratting i {
-    color: #FF6F61;
+    color: #1ABB9C;
     font-size: 14px;
 }
 
@@ -2154,7 +2154,7 @@ h2 {
 
 .contact .contact-info h3 i {
     width: 20px;
-    color: #FF6F61;
+    color: #1ABB9C;
     margin-right: 5px;
 }
 
@@ -2171,16 +2171,16 @@ h2 {
     padding: 5px 0;
     text-align: center;
     font-size: 18px;
-    border: 1px solid #FF6F61;
+    border: 1px solid #1ABB9C;
     border-radius: 4px;
 }
 
 .contact .social a i {
-    color: #FF6F61;
+    color: #1ABB9C;
 }
 
 .contact .social a:hover {
-    background: #FF6F61;
+    background: #1ABB9C;
 }
 
 .contact .social a:hover i {
@@ -2260,7 +2260,7 @@ h2 {
 }
 
 .footer .footer-widget ul li a:hover {
-    color: #FF6F61;
+    color: #1ABB9C;
 }
 
 .footer .footer-widget ul li a:hover::before {
@@ -2298,8 +2298,8 @@ h2 {
 }
 
 .footer .social a:hover {
-    color: #FF6F61;
-    border-color: #FF6F61;
+    color: #1ABB9C;
+    border-color: #1ABB9C;
 }
 
 .footer .payment {
@@ -2398,5 +2398,5 @@ h2 {
 /* Manage */
 .card-header-primary{
     background-color: #ffffff;
-    border-bottom: 1px solid rgba(255, 111, 97, .75);
+    border-bottom: 1px solid #1ABB9C;
 }
